<resources>
    <string name="app_name">Marvels</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Search</string>
    <string name="title_favorite">Favorite</string>
    <string name="character_image">characterImage</string>
    <string name="characters">Characters</string>
    <string name="spider_verse">Spider Verse</string>
    <string name="Marvel">Marvel</string>
    <string name="series">FEATURED SERIES</string>
    <string name="series_image">img</string>
    <string name="title_detail">Details</string>
    <string name="character_comics">Character Comics:</string>
</resources>